# BBDN-lti-1p3-tool-example

./: .dockerignore  .flaskenv  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  Taskfile  app.py  mkdocs.yaml  package-lock.json  package.json  pipeline.py  pyproject.toml  requirements.txt  source.bat  tox.ini
.github/: contributing.md
.github/.github/: contributing.md
.github/.github/workflows/: pull-request.yaml
.github/workflows/: pull-request.yaml
app/: __init__.py  wsgi.py
app/controllers/: assignment_controller.py  config_controller.py  launch_controller.py  oidc_controller.py  platform_controller.py  rest_auth_controller.py  routes.py
app/models/: jwks.py  jwt.py  platform_config.py  state.py  tool_config.py
app/static/css/: style.css
app/templates/: base.html  config.html  confirm_assignment.html  create_assignment.html  error.html  index.html  knowledge_check.html  submission_success.html
app/utility/: __init__.py  aws.py  cryptography_client.py  learn_client.py  token_client.py
docs/: POETRY.md  TASKFILE.md  TESTING.md  architecture.drawio
infrastructure/: __init__.py  stacks.py
infrastructure/constructs/: application.py  keys.py  lambdas.py  pipeline.py  tables.py
learn_resources/: README.md  create1Course.csv  create2users.csv  enroll2students.csv
payloads/: functional_login.json  get_tool_jwks.json  home.json  jwks.json  launch.json  oidc.json  platform.json  token_payload.json
tests/app/: __init__.py
tests/app/functional/: __init__.py  test_wsgi.py
tests/app/unit/: __init__.py  test_wsgi.py
